--- a/.github/workflows/light-tests.yml
+++ b/.github/workflows/light-tests.yml
@@ -3,6 +3,9 @@ name: LightPlatform Tests
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*.*.*'
+      - 'v*.*.*-*'
   pull_request:
 
 jobs:
@@ -25,3 +28,14 @@ jobs:
             test lightTest jacocoTestReport jacocoTestCoverageVerification
         env:
           CI: true
+      - name: Build plugin ZIP
+        if: ${{ success() }}
+        run: |
+          ./intellij-latex-plugin/gradlew -p intellij-latex-plugin --no-daemon --stacktrace buildPlugin
+      - name: Publish to GitHub Packages
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/v') }}
+        run: |
+          ./intellij-latex-plugin/gradlew -p intellij-latex-plugin --no-daemon --stacktrace publish -Pgithub.repo=${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ github.actor }}
