--- a/intellij-latex-plugin/src/main/resources/META-INF/plugin.xml
+++ b/intellij-latex-plugin/src/main/resources/META-INF/plugin.xml
@@ -56,6 +56,7 @@
     <applicationConfigurable id="net.samcaldwell.latex.LookupProviders"
                              displayName="LaTeX Tools (Lookup Providers)"
                              instance="net.samcaldwell.latex.LookupProvidersConfigurable"/>
+    <notificationGroup id="LaTeX" displayType="BALLOON" isLogByDefault="true"/>
   </extensions>
 
   <actions>
