integrate the new parser and data model to all the things

--- a/intellij-latex-plugin/src/main/resources/META-INF/plugin.xml
+++ b/intellij-latex-plugin/src/main/resources/META-INF/plugin.xml
@@ -63,6 +63,9 @@
                              displayName="LaTeX Tools (Lookup Providers)"
                              instance="net.samcaldwell.latex.LookupProvidersConfigurable"/>
     <notificationGroup id="LaTeX" displayType="BALLOON" isLogByDefault="true"/>
+
+    <!-- Background parser/validator for BibTeX files: underline issues in editor -->
+    <externalAnnotator language="BibTeX" implementationClass="net.samcaldwell.latex.bibtex.BibExternalAnnotator"/>
   </extensions>
 
   <actions>
